...
  val annotatedText = buildAnnotatedString {
    append(OnboardingFlowStrings.TERMS_MESSAGE_1 + OnboardingFlowStrings.SPACER)

    // Add clickable link
    pushLink(
        LinkAnnotation.Clickable(
            tag = OnboardingFlowTestTags.TERMS, linkInteractionListener = { onTermsClicked() }))
    withStyle(SpanStyle(color = Color.Blue)) { append(termsAndConditions) }
    pop()

    append(OnboardingFlowStrings.SPACER + OnboardingFlowStrings.TERMS_MESSAGE_2)
  }

...
